--- a/myproject/package.json
+++ b/myproject/package.json
@@ -14,6 +14,8 @@
     "vitest": "^2.1.8"
   },
   "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "seedrandom": "^3.0.5",
     "three": "^0.171.0"
   }
